--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 translate from something else than HEAD
 be able to select the branches you want to translate
+don't create so many temp files. Should create copier processes like this http://serverfault.com/questions/188936/writing-to-stdin-of-background-process
 
